[package]
name = "rust-snake"
version = "0.1.0"
authors = ["leocavalcante <lc@leocavalcante.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
sdl2 = {git = "https://github.com/leocavalcante/rust-sdl2", branch = "no_lazy_static"}
